# tuya_ble_lock_sdk_nrf52832_with_fitting

./: ble_app_uart_pca10040_s132.uvprojx.lnk  clear_git.bat  readme.md
nRF5_SDK_15.3.0_59ac345/components/libraries/util/: app_util_platform.h
nRF5_SDK_15.3.0_59ac345/examples/ble_peripheral/ble_app_uart/: main.c
tuya_ble_lock_sdk/doc/nRF52832/: nRF52832_flash分区表.txt
tuya_ble_lock_sdk/src/app/app_common/: app_active_report.c  app_active_report.h  app_common.c  app_common.h  app_flash.c  app_flash.h  app_ota.c  app_ota.h  app_port.c  app_port.h  app_test.c  app_test.h
tuya_ble_lock_sdk/src/app/app_lock/: lock_common.c  lock_common.h  lock_dp_parser.c  lock_dp_parser.h  lock_dp_report.c  lock_dp_report.h  lock_dynamic_pwd.c  lock_dynamic_pwd.h  lock_hard.c  lock_hard.h  lock_offline_pwd.c  lock_offline_pwd.h  lock_test.c  lock_test.h  lock_timer.c  lock_timer.h  tuya_template.c  tuya_template.h
tuya_ble_lock_sdk/src/cpt/cpt_math/: cpt_math.c  cpt_math.h  cpt_string_op.c  cpt_string_op.h
tuya_ble_lock_sdk/src/cpt/fpe_tuya/: .gitignore  CMakeLists.txt  README.md  com_tuya_test_FF1Test.c  com_tuya_test_FF1Test.h  ff1.c  ff1.h  ff1_common.h  fpe_cipher.c  fpe_cipher.h  fpe_config.h  fpe_decrypt.c  fpe_decrypt.h  fpe_example.c  fpe_math.c  fpe_math.h  fpe_str.c  fpe_str.h
tuya_ble_lock_sdk/src/cpt/fpe_tuya/mbed-crypto/: CMakeLists.txt
tuya_ble_lock_sdk/src/cpt/hash/: hmac-sha1.c  hmac-sha1.h  sha1.c  sha1.h
tuya_ble_lock_sdk/src/nrfs/: nrfs_ble.c  nrfs_ble.h  nrfs_common.c  nrfs_common.h  nrfs_flash.c  nrfs_flash.h  nrfs_gpio.c  nrfs_gpio.h  nrfs_scan_adv.c  nrfs_scan_adv.h  nrfs_svc.c  nrfs_svc.h  nrfs_test.c  nrfs_test.h  nrfs_timer.c  nrfs_timer.h  nrfs_uart.c  nrfs_uart.h  sd_template.c  sd_template.h
tuya_ble_lock_sdk/src/tuya_ble_sdk/: README.txt  ble_sdk总体方案.docx
tuya_ble_lock_sdk/tools/nRF5x_commandline_tools/: readme.txt
tuya_ble_lock_sdk/tools/nRF_DeviceFamilyPack/: NordicSemiconductor.nRF_DeviceFamilyPack.8.11.1.pack  NordicSemiconductor.nRF_DeviceFamilyPack.8.16.0.pack  NordicSemiconductor.nRF_DeviceFamilyPack.8.24.1.pack  NordicSemiconductor.nRF_DeviceFamilyPack.8.30.2.pack
(+331 files in other folders)
