cmake_minimum_required(VERSION 3.10)
project(fpe C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_VERBOSE_MAKEFILE ON)
include_directories("${PROJECT_SOURCE_DIR}/mbed-crypto/include" "/opt/java/include" "/opt/java/include/linux")
add_subdirectory(mbed-crypto)
add_library(fpe SHARED ff1.c fpe_str.c fpe_math.c fpe_cipher.c)
add_library(jnifpe SHARED com_tuya_test_FF1Test.c ff1.c fpe_str.c fpe_math.c fpe_cipher.c)
add_executable(test main.c ff1.c fpe_str.c fpe_math.c fpe_cipher.c)
target_link_libraries(fpe mbed-crypto)
target_link_libraries(jnifpe mbed-crypto)
target_link_libraries(test mbed-crypto)